# orqviz

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  publish_release.yml  style.yml
actions/style/: action.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/examples/: advanced_example_notebook.ipynb  discrete_cosine_transform.ipynb  fourier_transform.ipynb  gradient_descent_optimizer.py  orqviz_tutorial_cirq.ipynb  orqviz_tutorial_orquestra.ipynb  orqviz_tutorial_pennylane.ipynb  orqviz_tutorial_qiskit.ipynb  sombrero.ipynb
docs/examples/data/: h2_ham_2q.data  h2_ham_2q_qiskit
examples/: example_notebook.ipynb  gradient_descent_optimizer.py
src/orqviz/: __init__.py  aliases.py  dct.py  fourier.py  geometric.py  gradients.py  io.py  loss_function.py  plot_utils.py  plots.py  utils.py
src/orqviz/elastic_band/: __init__.py  auto_neb.py  data_structures.py  neb.py  plots.py
src/orqviz/hessians/: __init__.py  data_structures.py  hessians.py  plots.py
src/orqviz/pca/: __init__.py  data_structures.py  plots.py  scans.py
src/orqviz/scans/: __init__.py  data_structures.py  evals.py  plots.py  scans_1D.py  scans_2D.py
src/python/orqviz/: geometric.py  plot_utils.py  plots.py  utils.py
src/python/orqviz/elastic_band/: neb.py  plots.py
src/python/orqviz/hessians/: plots.py
src/python/orqviz/pca/: __init__.py  scans.py
src/python/orqviz/scans/: data_structures.py  evals.py  scans_1D.py  scans_2D.py
subtrees/z_quantum_actions/: Makefile  README.rst  pyproject.toml  pytest.ini  sample_setup.py  setup_extras.py  variables.mk
subtrees/z_quantum_actions/actions/coverage/: action.yml
subtrees/z_quantum_actions/actions/publish-release/: action.yml
subtrees/z_quantum_actions/actions/ssh_setup/: action.yml
subtrees/z_quantum_actions/workflow-templates/: coverage.yml  publish_release.yml
tests/: fourier_test.py  test_get_next_version.py
tests/orqviz/: elastic_band_test.py  fourier_test.py  geometric_test.py  gradients_test.py  hessians_test.py  io_test.py  loss_function_test.py  pca_test.py  scans_test.py  utils_test.py
tests/orqviz/elastic_band/: elastic_band_test.py  plots_test.py
tests/orqviz/hessians/: hessians_plots_test.py  hessians_test.py
tests/orqviz/pca/: pca_plots_test.py  pca_test.py
tests/orqviz/scans/: scans_plots_test.py  scans_test.py
workflow-templates/: coverage.yml  publish_release.yml
