[metadata]
name = orqviz
version = 0.1.0
description = Python package for visualizing loss landscapes of Parameterized Quantum Circuits
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orqviz
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = Apache Software License 
license_file = LICENSE
classifiers =
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering"
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

#TODO: Find minimal versions that work.
install_requires =
    numpy>=1.12.2
    scipy>=1.7.1
    matplotlib>=3.4.3
    scikit-learn>=1.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=3.7.1
    pytest-cov>=3.0.0
    black>=20.8b
    flake8>=3.9
    mypy==v0.812
    isort>=5.8