[metadata]
name = orqviz
version = 0.2.0
description = Python package for visualizing the loss landscapes of Variational Quantum Algorithms
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orqviz
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = Apache Software License 
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

install_requires =
    numpy>=1.14.6
    scipy>=1.5.4
    matplotlib>=2.2.5
    scikit-learn>=1.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    orquestra-python-dev
